--- a/src/partials/_mixin.scss
+++ b/src/partials/_mixin.scss
@@ -22,6 +22,7 @@
 // <<<<<<<< CSS RESET >>>>>>>> \\
 
 @mixin normal {
+    font-size: 62.5%;
     box-sizing: border-box;
     *, *:before, *:after {box-sizing: inherit}
     margin: 0;
