homepage styled further to set the navigation bar alignment

--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -38,6 +38,7 @@ $color-secondary: (
 $color-background: (
     "nav-bg": #fff,
     "hero-bg": #5f6361,
+    "hero-pic-bg": #ffffffc4,
     "card-bg": #F4E6CF,
     "counter-bg": #DAA520,
     "card-pop-bg": #DAA520,
