--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -3,8 +3,8 @@
 .hero-grid{
     background-color: map-get($color-background, hero-bg);
     display: grid;
-    grid-template-areas: "head" "main";
-    grid-template-rows: 10% 90%;
+    grid-template-areas: "head" "main" "foot";
+    grid-template-rows: 10% 80% 10%;
     grid-template-columns: 1fr;
     height: 100vh;
     &__head{
@@ -15,28 +15,28 @@
         align-items: center;
     }
     &__logo{
-        padding: 2rem 0 1rem 0;
-        width: 10rem;
+        padding: 2rem 0 0.5rem 0;
+        width: 15rem;
     }
     &__main{
         grid-area: "main";
         @include tablet{
             display: flex;
             flex-direction: row;
-            justify-content: space-between;
+            justify-content: space-evenly;
             align-items: center;
         }
     }
-    &__content{
-        margin: 15vh 5% 25vh 5%;
-    }
     &__main-title{
+        margin: 2rem 0;
+        color: map-get($color-primary, global-white);
         font-size: map-get($size, mob-page-header);
         @include desktop {
             font-size: map-get($size, desktop-page-header);
         }
     }
     &__start-nominate{
+        margin: 2rem 0;
         height: 3.25rem;
         @include nominate-size;
         width: 18.75rem;
@@ -56,18 +56,22 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: map-get($color-primary, global-white);
+        border-radius: 35px;
+        //background-color: map-get($color-background, hero-pic-bg);
         @include tablet{
-            width: 50vw;
-            height: 80vh;
-            margin: 0;
+            width: 40vw;
+            height: 70vh;
+            margin: 5%;
         }
     }
     &__hero-pic{
         width: 60vw;
         @include tablet{
-            width: 40vw;
-            height: 40vw;
+            width: 30vw;
+            height: 30vw;
         }
+    }
+    &__foot{
+        background-color: map-get($color-primary, global-white);
     }
 }
