--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -1,3 +1,17 @@
 .main{
-    height: 100vh;
+    position: absolute;
+    top: 10vh;
+    height: 90vh;
+    animation: appear 2s;
+}
+
+@keyframes appear {
+    0%{
+        opacity: 0;
+        transform: translateX(100vw);
+    }
+    100%{
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
