main skeleton created with styling

--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -11,7 +11,8 @@ $size: (
     "desktop-page-header": 3rem,
     "start-nominate": 1rem,
     "nav-bar": 1.0625rem,
-    "section-header":1.75rem,
+    "section-header":1.5rem,
+    "section-count":1rem,
     "card-title":0.875rem,
     "card-year": 0.0125rem,
     "card-nominate": 0.75rem,
