--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,7 +1,7 @@
 @import '../../partials/mixin';
 
 .head{
-    position: absolute;
+    position: fixed;
     top: 0;
     z-index: 10;
     height: 10vh;
