--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -10,6 +10,7 @@
     grid-template-columns: 1fr;
     height: 100vh;
     width: 100vw;
+    animation: appearance 2s linear;
     &__main{
         grid-area: "main";
         @include tablet{
@@ -69,5 +70,16 @@
     }
     &__foot{
         background-color: map-get($color-primary, global-white);
+    }
+}
+
+@keyframes appearance {
+    0%{
+        opacity: 0;
+        transform: translateX(-100vw);
+    }
+    100%{
+        opacity: 1;
+        transform: translateX(0);
     }
 }
