--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -39,36 +39,10 @@
             color: map-get($color-primary, global-text);
             font-size: map-get($size, nav-bar);
         }
+        &[type="search"]:focus::-webkit-search-cancel-button {
+            opacity: 0;
+        }
     }
-    &__search-bar[type="search"].dark {
-        //background: #222;
-        //color: #fff;
-      }
-      
-      &__search-bar[type="search"].light {
-        //background: #fff;
-        //color: #222;
-      }
-      
-      &__search-bar[type="search"]::-webkit-search-cancel-button {
-        // -webkit-appearance: none;
-        // height: 1em;
-        // width: 1em;
-        // border-radius: 50em;
-        // background: url(https://pro.fontawesome.com/releases/v5.10.0/svgs/solid/times-circle.svg) no-repeat 50% 50%;
-        // background-size: contain;
-        // opacity: 0;
-        // pointer-events: none;
-      }
-      
-      &__search-bar[type="search"]:focus::-webkit-search-cancel-button {
-        opacity: 0;
-        //pointer-events: all;
-      }
-      
-    //   &__search-bar[type="search"].dark::-webkit-search-cancel-button {
-    //     filter: invert(1);
-    //   }
     &__center{
         display: flex;
         justify-content: space-between;
