--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -2,23 +2,28 @@
 
 .hero-grid{
     position: absolute;
-    top: 0;
+    top: 15vh;
     background-color: map-get($color-background, hero-bg);
     display: grid;
     grid-template-areas: "main" "foot";
-    grid-template-rows: 90vh 10vh;
+    grid-template-rows: 75vh 10vh;
     grid-template-columns: 1fr;
     height: 100vh;
     width: 100vw;
     animation: appearance 2s linear;
     &__main{
         grid-area: "main";
-        @include tablet{
-            display: flex;
-            flex-direction: row;
-            justify-content: space-evenly;
-            align-items: center;
-        }
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    &__content{
+        display: flex;
+        flex-direction: column;
+        height: fit-content;
+        margin-left: 5%;
     }
     &__main-title{
         margin: 2rem 0;
@@ -29,13 +34,15 @@
         }
     }
     &__start-nominate{
-        margin: 2rem 0;
-        height: 3.25rem;
+        margin: 0;
+        padding: 1rem;
+        text-align: center;
+        text-decoration: none;
         @include nominate-size;
         width: 18.75rem;
         outline: none;
         @include desktop{
-            width: 20rem;
+            width: 14rem;
         }
         font-size: map-get($size, start-nominate);
         box-shadow: 0 5px 15px 0 map-get($color-secondary, nominate-shadow);
@@ -54,7 +61,6 @@
         justify-content: center;
         align-items: center;
         border-radius: 35px;
-        //background-color: map-get($color-background, hero-pic-bg);
         @include tablet{
             width: 40vw;
             height: 70vh;
@@ -62,11 +68,17 @@
         }
     }
     &__hero-pic{
-        width: 60vw;
+        margin: 5%;
+        @include hero-image;
+        width: 40vw;
         @include tablet{
             width: 30vw;
             height: 30vw;
         }
+        // @include desktop{
+        //     width: 20vw;
+        //     height: 20vw;
+        // }
     }
     &__foot{
         background-color: map-get($color-primary, global-white);
