--- a/src/partials/_mixin.scss
+++ b/src/partials/_mixin.scss
@@ -36,3 +36,10 @@
         width: fit-content;
     }
 }
+
+@mixin hero-image {
+    @media (max-width: 440px) {
+        width: 65vw;
+        margin: 1rem auto;
+    }
+}
