--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -16,7 +16,12 @@
         border-radius: 3px;
         height: fit-content;
         display: flex;
+        flex-direction: column;
         justify-content: center;
+        align-items: center;
+    }
+    &__search{
+        height: 0;
     }
     &__search-bar{
         background-image: url('../../assets/images/search.svg');
@@ -26,8 +31,8 @@
         outline: none;
         width: 30vw;
         height: 4em;
-        margin-top: 0;
-        margin-bottom: -4em;
+        margin-top: -4rem;
+        //margin-bottom: 4em;
         z-index: 7;
         border: map-get($color-secondary, nav-border) solid 1px;
         border-radius: 99em;
