--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -7,14 +7,8 @@
     width: 100vw;
     padding: 0.5rem 0;
     margin: 0;
-    font-size: 1em;
-    //font-weight: lighter;
-    //border-bottom: 0.1rem #c0c0c0 solid;
-    //width: 100vw;
-    //height: fit-content;
-    //box-shadow: 0 1px 4px rgb(0 0 0 / 4%);
-    //border: 1px solid map-get($color-secondary, main-borders);
-    //border-radius: 3px;
+    font-size: map-get($size, nav-bar);
+    font-weight: bold;
     color: goldenrod;
     &__left{
         display: flex;
@@ -50,67 +44,20 @@
 select {
     appearance: none;
     background-color: transparent;
-    border: none;
+    border: 1px solid map-get($color-secondary, nav-border);
+    border-radius: 99em;
     padding: 0;
     margin: 0;
-    width: 100%;
+    width: 6rem;
+    height: 2rem;
+    padding: 0 0.5em;
     outline: none;
     color: map-get($color-primary, global-text);
     font-size: map-get($size, nav-bar);
+    background-color: transparent;
+    background-image: url('../../assets/images/down-arrow.svg');
+    background-repeat: no-repeat;
+    background-position: right center;
+    background-size: 1.5rem;
+    //cursor: pointer;
 }
-
-    .custom-select {
-        width: 10ch;
-        border: 1px solid map-get($color-secondary, nav-border);
-        border-radius: 99em;
-        padding: 0 0.5em;
-        cursor: pointer;
-        //line-height: 1.1;
-        background-color: transparent;
-        height: 2rem;
-    }
-    .custom-select::after {
-        content: "";
-        width: 0.8em;
-        height: 0.5em;
-        background-color: map-get($color-background, counter-bg);
-        clip-path: polygon(100% 0%, 0 0%, 50% 100%);
-    }
-  .custom-select {
-    display: flex;
-  }
-
-  .custom-select {
-    // ...existing styles
-    grid-template-areas: "select";
-  }
-  
-  select,
-  .custom-select:after {
-    grid-area: select;
-  }
-
-  .custom-select {
-    // ...existing styles
-    align-items: center;
-  }
-  
-  .custom-select:after {
-    // ...existing styles
-    justify-self: end;
-  }
-
-  select:focus + .focus {
-    position: absolute;
-    top: -1px;
-    left: -1px;
-    right: -1px;
-    bottom: -1px;
-    border: 2px solid var(--select-focus);
-    border-radius: inherit;
-  }
-
-  .custom-select {
-    // ...existing styles
-    position: relative;
-  }
