--- a/src/components/Movies/Movies.scss
+++ b/src/components/Movies/Movies.scss
@@ -87,6 +87,12 @@
             border: 1px solid map-get($color-secondary, nominate-shadow);
             background-color: map-get($color-background, nominate-bg);
         }
+        &:disabled{
+            color: map-get($color-primary, global-white);
+            border: 1px solid map-get($color-secondary, nominate-shadow);
+            background-color: map-get($color-background, nominate-bg);
+            opacity: .5;
+        }
     }
     &__disable-nominate-btn{
         padding: 1rem;
@@ -96,5 +102,87 @@
         cursor: pointer;
         outline: none;
         opacity: 0.3;
+    }
+}
+.movie-details {
+    &__details{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0;
+        padding: 0;
+        opacity: 0;
+        &:hover{
+            opacity: 1;
+        }
+    }
+    &__close{
+        position: absolute;
+        background: none;
+        border: 0;
+        top: 1rem;
+        right: 1rem;
+        cursor: pointer;
+        font-size: 1.5rem;
+        &:active{
+            outline: none;
+        }
+    }
+    .test-thumb{
+        max-width: 70%;
+        margin-right: 2rem;
+    }
+
+    &__top{
+        margin-top: 1rem;
+        // width: 100%;
+        // height: 30%;
+        @media (min-width: 769px) {
+            height: 80%;
+        }
+        display: flex;
+    }
+    // &__video{
+    //     height: 20vh;
+    //     display: none;
+    //     @media (min-width: 769px) {
+    //         display: block;
+    //     }
+    // }
+    &__video--media{
+        height: 10vh;
+    }
+    &__instructions{
+        font-size: 13px;
+        font-weight: bold;
+        text-align: center;
+        color: #323648;
+        padding: 0.1rem;
+        padding-left: 3rem;
+    }
+    &__intro{
+        width:80vw;
+    }
+    &__subtitle{
+        text-transform: capitalize;
+        letter-spacing: 0.4rem;
+        font-weight: 600;
+        font-size: 17px;
+        line-height: 1.5em;
+        text-align: center;
+        color: #323648;
+        padding: 0.1rem;
+        margin: 0.3rem 0;
+    }
+    &__nominate-btn{
+        padding: 1rem;
+        border: 0.1rem #c0c0c0 solid;
+        border-radius: 3px;
+        background-color: rgb(252, 212, 110);
+        cursor: pointer;
+        outline: none;
+        &:hover{
+            border: 0.1rem #80c0c0 solid;
+        }
     }
 }
