shareable links added

--- a/src/components/ClipBoard/Clip.scss
+++ b/src/components/ClipBoard/Clip.scss
@@ -2,7 +2,7 @@
     &__tag{
         width: 3rem;
         height: 3rem;
-        background-image:url('../../assets/icons/clipboard.svg');
+        background-image:url('../../assets/images/clipboard.svg');
         background-size: contain;
         background-repeat: no-repeat;
         background-color: #f6e601;
