--- a/src/components/Movies/Movies.scss
+++ b/src/components/Movies/Movies.scss
@@ -110,82 +110,10 @@
         width: 100%;
         z-index: 30;
     }
-}
-.movie-details {
-    &__details{
-        width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        margin: 0;
-        padding: 0;
-    }
-    &__close{
-        position: absolute;
-        background: none;
-        border: 0;
-        top: 1rem;
-        right: 1rem;
-        cursor: pointer;
-        font-size: 1.5rem;
-        &:active{
-            outline: none;
-        }
-    }
-    .test-thumb{
-        max-width: 70%;
-        margin-right: 2rem;
-    }
-
-    &__top{
-        margin-top: 1rem;
-        // width: 100%;
-        // height: 30%;
-        @media (min-width: 769px) {
-            height: 80%;
-        }
-        display: flex;
-    }
-    // &__video{
-    //     height: 20vh;
-    //     display: none;
-    //     @media (min-width: 769px) {
-    //         display: block;
-    //     }
-    // }
-    &__video--media{
-        height: 10vh;
-    }
-    &__instructions{
-        font-size: 13px;
-        font-weight: bold;
-        text-align: center;
-        color: #323648;
-        padding: 0.1rem;
-        padding-left: 3rem;
-    }
-    &__intro{
-        width:80vw;
-    }
-    &__subtitle{
-        text-transform: capitalize;
-        letter-spacing: 0.4rem;
-        font-weight: 600;
-        font-size: 17px;
-        line-height: 1.5em;
-        text-align: center;
-        color: #323648;
-        padding: 0.1rem;
-        margin: 0.3rem 0;
-    }
-    &__nominate-btn{
-        padding: 1rem;
-        border: 0.1rem #c0c0c0 solid;
-        border-radius: 3px;
-        background-color: rgb(252, 212, 110);
-        cursor: pointer;
+    &__more-details{
+        border: none;
         outline: none;
-        &:hover{
-            border: 0.1rem #80c0c0 solid;
-        }
+        background: none;
+        color: goldenrod;
     }
 }
