--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -44,5 +44,5 @@ $color-background: (
     "card-bg": #F4E6CF,
     "counter-bg": #DAA520,
     "card-pop-bg": #DAA520,
-    "nominate-bg": #DAA520
+    "nominate-bg": #f0b624
 );
