final changes in styling made

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -16,5 +16,8 @@
         font-family: 'myriad';
         padding: 1rem 0 0.5rem 0;
         width: 15rem;
+        @media (max-width: 280px) {
+            width: 90vw;
+        }
     }
 }
