--- a/src/components/Movies/Movies.scss
+++ b/src/components/Movies/Movies.scss
@@ -116,5 +116,8 @@
         background: none;
         color: goldenrod;
         margin-top: 0.2rem;
+        @media (max-width:340px) {
+            display: none;
+        }
     }
 }
