--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -32,7 +32,10 @@
         width: 30vw;
         height: 4em;
         margin-top: -4rem;
-        //margin-bottom: 4em;
+        @media (max-width: 1315px) {
+            margin: 0;
+            width: 100vw;
+        }
         z-index: 7;
         border: map-get($color-secondary, nav-border) solid 1px;
         border-radius: 99em;
@@ -56,6 +59,9 @@
         width: 100vw;
         margin: 0;
         padding: 0;
+        @media (max-width: 1315px) {
+            margin-top: 5vh;
+        }
     }
     &__movies{
         flex: 3 50rem;
