--- a/src/components/MovieDetails/MovieDetails.scss
+++ b/src/components/MovieDetails/MovieDetails.scss
@@ -29,12 +29,8 @@
         z-index: 7;
         display: flex;
         align-items: center;
-    }
-    &__details{
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        background-color: rgba(255, 255, 255, 0.418);
+        flex-wrap: wrap;
+        justify-content: center;
     }
     &__close{
         position: absolute;
@@ -49,25 +45,15 @@
             outline: none;
         }
     }
-    .test-thumb{
-        max-width: 70%;
-        margin-right: 2rem;
-    }
-
-    &__top{
-        margin-top: 1rem;
-        // width: 100%;
-        // height: 30%;
-        @media (min-width: 769px) {
-            height: 80%;
-        }
-        display: flex;
-    }
-    &__video--media{
-        height: 80%;
+    &__pic{
+        height: 50%;
         margin: 2%;
         border: 6px solid goldenrod;
         border-radius: 6px;
+        @media (max-width:532px) {
+            width: 70vw;
+            height: fit-content;
+        }
     }
     &__instructions{
         font-size: 20px;
@@ -77,8 +63,6 @@
         margin: 0.3rem;
         line-height: 2.2rem;
         letter-spacing: 0.1rem;
-        // padding: 0.1rem;
-        // padding-left: 3rem;
     }
     &__intro{
         border: 2px solid goldenrod;
@@ -95,16 +79,5 @@
         color: goldenrod;
         padding: 0.1rem;
         margin: 0.3rem 0;
-    }
-    &__nominate-btn{
-        padding: 1rem;
-        border: 0.1rem #c0c0c0 solid;
-        border-radius: 3px;
-        background-color: rgb(252, 212, 110);
-        cursor: pointer;
-        outline: none;
-        &:hover{
-            border: 0.1rem #80c0c0 solid;
-        }
     }
 }
