--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -4,18 +4,35 @@
     background-color: #daa52029;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     width: 100vw;
     padding: 0.5rem 0;
     margin: 0;
     font-size: map-get($size, nav-bar);
     font-weight: bold;
     color: goldenrod;
+    @media (max-width: 1315px) {
+        padding: 0;
+        justify-content: center;
+    }
+    @media (max-width: 460px) {
+        flex-direction: column;
+    }
     &__left{
         display: flex;
         width: 25vw;
         justify-content: space-between;
         align-items: center;
+        flex-wrap: wrap;
         margin-left: 4%;
+        @media (max-width: 1315px) {
+            margin: 0;
+            width: fit-content;
+        }
+        @media (max-width: 460px) {
+            flex-direction: column;
+            width: 100vw;
+        }
     }
     &__banner{
         width: 100vw;
@@ -28,23 +45,58 @@
     &__logo{
         width: 30px;
         object-fit: contain;
+        @media (max-width: 1315px) {
+            display: none;
+        }
     }
     &__right{
         display: flex;
         align-items: center;
         width: 30vw;
         justify-content: space-between;
+        //flex-wrap: wrap;
+        @media (max-width: 1315px) {
+            margin: 0;
+            width: fit-content;
+        }
+        @media (max-width: 460px) {
+            flex-direction: column;
+            width: 100vw;
+        }
     }
     &__sort{
         display: flex;
         align-items: center;
         margin-right: 3%;
+        @media (max-width: 1315px) {
+            border: 1px solid goldenrod;
+            width: 34vw;
+            margin: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        @media (max-width: 460px) {
+            width: 100vw;
+        }
     }
     &__sort-tag{
         margin: 0 1rem;
     }
     &__count{
         height: fit-content;
+        @media (max-width: 1315px) {
+            border: 1px solid goldenrod;
+            width: 33vw;
+            margin: 0;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        @media (max-width: 460px) {
+            width: 100vw;
+        }
     }
 }
 select {
