--- a/src/index.scss
+++ b/src/index.scss
@@ -7,4 +7,7 @@ body, #root{
     background-size: cover;
     background-position-y: 15vh;
     width: 100vw;
+    @media (max-width: 1315px) {
+        background-position-y: 20vh;
+    }
 }
